--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/microservices": "^7.4.2",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "amqp-connection-manager": "^3.2.0",
+    "amqplib": "^0.6.0",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
