--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@nestjs/microservices": "^7.4.2",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^7.4.2",
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
     "mongoose": "^5.10.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -43,7 +44,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.7",
     "@types/jest": "25.2.3",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^13.9.1",
