--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^7.4.2",
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
