--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^7.4.2",
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
+    "docx-templates": "^4.5.0",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
@@ -40,7 +41,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "xlsx-template": "^1.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
