--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
     "docx-templates": "^4.5.0",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
