--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs-plus/rabbitmq": "^1.4.4",
+    "@nestjs/bull": "^0.2.2",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -32,6 +33,7 @@
     "@nestjs/platform-express": "^7.4.2",
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
+    "bull": "^3.18.0",
     "docx-templates": "^4.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
@@ -49,6 +51,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bull": "^3.14.4",
     "@types/express": "^4.17.8",
     "@types/jest": "25.2.3",
     "@types/mongoose": "^5.7.36",
