--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0",
     "bull": "^3.18.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "docx-templates": "^4.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
